--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
-</body>
+<div>My current favourite song is [Minnalai pidithu]" where [thaai kelavi] should be replaced with your actual favourite song name. </div>
+<a href="https://youtu.be/LF_1_hy2wXU?si=8p6eh0_RsmZDRdxz">Click Here</a></body>
 
 </html>
